--- a/sewing/products.html
+++ b/sewing/products.html
@@ -27,17 +27,17 @@
             <h2>Dresses</h2>
         <img class="product-img" src="Images/GreenDress.jpg" alt="Clothing Image 1">
         </div>
-        <div id="textp">
+        <div class="textp">
             <p>Price: $50</p>
             <p>
                 Description: A pink lace fabric over a matching pink satin fabric. 
                 Sizing can be adjusted to customer needs. Other colors are availble based on stock. 
             </p>
         </div>
-        <div id="dress2">
+        <div class="dress2">
         <img class="product-img" src="Images/Nicedress.jpg" alt="Clothing Image 2">
         </div>
-        <div id="textp1">
+        <div class="textp1">
             <p>Price: $35</p>
             <p>
                 Description: A green jersy knit fabric styled to be cute and comfortable!
@@ -48,17 +48,17 @@
             <h2>Skirts</h2>
             <img class="product-img" src="Images/Skirt1.jpg" alt="Skirt Image 1">
         </div>
-        <div id="text">
+        <div class="text">
             <p>Price: $30</p>
             <p>
                 Description: A simple design with a comfort, elastic waist to fit almost any size.
                 The fabric is a stretchy cotton with many color selections.
             </p>
             </div>
-        <div id= "skirt2">
+        <div class= "skirt2">
             <img class="product-img" src="Images/RedSkirt.webp" alt="Skirt Image 2">
         </div>
-        <div id="textp2">
+        <div class="textp2">
             <p>Price: $30</p>
             <p>
                 Description: A non-stretch skirt that provides style and unique to spice up your outfits.
@@ -69,17 +69,17 @@
         <h2>Shirts</h2>
         <img class="product-img" src="Images/shirt.jpeg" alt="Shirt 1">
         </div>
-        <div id="textp3">
+        <div class="textp3">
             <p>Price: $10-$15</p>
             <p>
                 Description: A simple T-shirt with a variety of colors and a cheap price tag.
                 The fabric can range from cotton to polyester. Pricing may vary based upon fabric request and sizing. 
             </p>
         </div>
-        <div id="shirt2">
+        <div class="shirt2">
             <img class="product-img" src="Images/CreamBlouse.jpeg" alt="Shirt 2">
         </div>
-        <div id="textp4a">
+        <div class="textp4a">
             <p>Price: $35</p>
             <p>
                 Description: This gorgeous jersey knit with an organza overlay will bedazzle your outfits to 
@@ -90,7 +90,7 @@
             <h2>Baby</h2>
             <img class="product-img" src="Images/BabyClothesMain.jpg" alt="Baby Clothes 1">
         </div>
-            <div id="textp4">
+            <div class="textp4">
                 <p>Price: $20</p>
             <p>
                 Description: An adorble, formal look for your baby/toddler that will make all of your friends adore your little one.
@@ -98,10 +98,10 @@
                 and stylish. 
             </p>
             </div>
-            <div id="baby2">
+            <div class="baby2">
                 <img class="product-img" src="Images/Babyclothesgirl.webp" alt="Baby Clothes 2">
             </div>
-            <div id="textp5">
+            <div class="textp5">
                 <p>Price: $25</p>
                 <p>
                     Description: A onesie, skirt, and bow to match the set for your little princess!
@@ -116,16 +116,16 @@
         <div class="dress1">
         <img class="product-img" src="Images/GreenFabric.jpeg" alt="Green fabric">
         </div>
-        <div id="textp">
+        <div class="textp">
             <p>Price: $20 per yard</p>
             <p>
                 Description: An allway-stretch, rose-gold, sequins fabric that would be great for party dresses and tops.
             </p>
         </div>
-        <div id="dress2">
+        <div class="dress2">
         <img class="product-img" src="Images/SequinFabric.jpg" alt="Sequin fabric">
         </div>
-        <div id="textp1">
+        <div class="textp1">
             <p>Price: $12 per yard</p>
             <p>
                 Description: A shiny, green, satin that can be used for your favorite dresses and costumes!
@@ -134,16 +134,16 @@
         <section class="skirt1">
             <img class="product-img" src="Images/BlueFabric.jpeg" alt="Blue Fabric">
         </section>
-        <div id="text">
+        <div class="text">
             <p>Price: $12 per yard</p>
             <p>
                 Description: A matte, blue, satin that can be used for your favorite dresses and costumes!
             </p>
             </div>
-        <div id= "skirt2">
+        <div class= "skirt2">
             <img class="product-img" src="Images/ButterflyFabric.jpg" alt="Butterfly Fabric">
         </div>
-        <div id="textp2">
+        <div class="textp2">
             <p>Price: $30 per yard</p>
             <p>
                 Description: A Black & White Butterfly Embroidered Lace Fabric that can be used for a variety of clothing options
@@ -153,16 +153,16 @@
         <div class="shirt1">
         <img class="product-img" src="Images/MushroomFabric.jpg" alt="Mushroom Fabric">
         </div>
-        <div id="textp3">
+        <div class="textp3">
             <p>Price: $15 per yard</p>
             <p>
                 Description: An adorable pattern that is typically used for baby clothing and blankets.
                         </p>
         </div>
-        <div id="shirt2">
+        <div class="shirt2">
             <img class="product-img" src="Images/PinkFabric.jpg" alt="Pink Fabric">
         </div>
-        <div id="textp4a">
+        <div class="textp4a">
             <p>Price: $22 par yard</p>
             <p>
                 Description: A pink floral embroidered lace usally used for formal dresses for proms, homecomings, and special events!
@@ -171,16 +171,16 @@
         <div class="baby">
             <img class="product-img" src="Images/PlaidFabric.jpg" alt="Plaid Fabric">
         </div>
-            <div id="textp4">
+            <div class="textp4">
                 <p>Price: $12 per yard</p>
             <p>
                 Description: A brown flannel fabric that can be used for tops, skirts, or blankets. 
             </p>
             </div>
-            <div id="baby2">
+            <div class="baby2">
                 <img class="product-img" src="Images/RacconsandBearFabric.jpg" alt="Baby Fabric">
             </div>
-            <div id="textp5">
+            <div class="textp5">
                 <p>Price: $12 per yard</p>
             <p>
                 Description: A cute baby design made from a flannel fabric that is typically used for baby blankets or swaddles.
