final products html

--- a/sewing/products.html
+++ b/sewing/products.html
@@ -131,9 +131,9 @@
                 Description: A shiny, green, satin that can be used for your favorite dresses and costumes!
             </p>
         </div>
-        <section class="skirt1">
+        <div class="skirt1">
             <img class="product-img" src="Images/BlueFabric.jpeg" alt="Blue Fabric">
-        </section>
+        </div>
         <div class="text">
             <p>Price: $12 per yard</p>
             <p>
@@ -201,7 +201,6 @@
         <a class="join" href="contactussewing.html">Contact Us</a>
         </div>
     </div>
-    </main>
     <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
         <p><a href="products.html">Products</a></p>
