--- a/sewing/contactussewing.html
+++ b/sewing/contactussewing.html
@@ -67,7 +67,7 @@
     </script>
 <footer>
     <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
-    <p><a href="products.html">Products</a></p>
+    <p><a href="site-plan.html">Site Plan</a></p>
     <p><a href="contactussewing.html">Contact Us</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
