--- a/sewing/index.html
+++ b/sewing/index.html
@@ -70,7 +70,7 @@
 </div>
         <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
-        <p><a href="products.html">Products</a></p>
+        <p><a href="site-plan.html">Site Plan</a></p>
         <p><a href="contactussewing.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
