--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -30,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="Images/Sew Strong.png" alt="Logo image">
+      <img src="Images/SewStrong.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -86,9 +86,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Products</a>
-        <a href="#">Contact Us</a>
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="contactussewing.html">Contact Us</a>
       </nav>
       <hr>
       <h2>
@@ -195,7 +195,7 @@ help you on your next outfit/project!
         These images will match products on the Products page and have a link to their respective section on that page. 
         link for the wireframe: https://wireframe.cc/5lfUk5
       </p>
-      <img src="Images/Wireframe Home.png" alt="home page wireframe">
+      <img src="Images/WireframeHome.png" alt="home page wireframe">
 
       <h3>Products</h3>
       <p>         
@@ -203,14 +203,14 @@ help you on your next outfit/project!
         This will give the consumer a look into what they might be purchasing, what it's made of, and time frame for it's creation.
        link for the wireframe: https://wireframe.cc/9vOWTv
       </p>
-      <img src="Images/Products Wireframe.png" alt="products wireframe">
+      <img src="Images/ProductsWireframe.png" alt="products wireframe">
 
       <h3>Contact Us</h3>
       <p>    
         The two images will be referencing delivery methods and stock customer satisfaction.     
        link to the wireframe: https://wireframe.cc/Obfz9g 
       </p>
-      <img src="Images/Contact Us Wireframe.png" alt="contact us wireframe">
+      <img src="Images/ContactUsWireframe.png" alt="contact us wireframe">
     </main>
   </body>
 
