--- a/sewing/index.html
+++ b/sewing/index.html
@@ -32,7 +32,7 @@
             <img class="photo-img" src="Images/BlueFabric.jpeg" alt="Fabric Image 1">
         </section>
         <div id= "camp2">
-            <img class="photo-img" src="Images/PinkFabric.jpg" alt="Fabric Image 2">
+            <img class="photo-img" src="Images/GreenFabric.jpeg" alt="Fabric Image 2">
         </div>
         <section class="nat1">
         <h2>Adjustments</h2>
