--- a/sewing/contactussewing.html
+++ b/sewing/contactussewing.html
@@ -19,9 +19,31 @@
                 <a href="contactussewing.html">Contact Us</a>
             </nav>
         </header>
+        <!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="Images/emailing.jpeg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="Images/sellingdress.jpg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="Images/woman-trying-on-dress.jpg" style="width:100%">
+    </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
     <main class="Time Frame">
-        <img src="Images/emailing.jpeg" alt="Email">
-        <img src="Images/sellingdress.jpg" alt="A women selling a dress">
         <h2>Time Frame</h2>
         <p>Most main stream clothing sales will take 1-2 months to process, be created, and shipped to the customer.
             Any adjustments made to clothing will be variable based upon the difficulty of the adjustment and the type
@@ -64,6 +86,34 @@
             // add a class to move everything down so our message doesn't cover it.
             document.body.classList.toggle('moveDown');
         });
+</script>
+<script>
+    let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
     </script>
 <footer>
     <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
