Fixing paragraph issues

--- a/sewing/products.html
+++ b/sewing/products.html
@@ -192,14 +192,14 @@
         <a>Adjustments</a>
     </div>
     <div class="Adjustments">
-        <div class="AdjustmentsS">
         <img src="Images/Adjustment2.jpg" alt="Adjustments Photo 2">
         <img src="Images/Adjustment1.jpg" alt="Ajustments Photo 1">
         <p>Clothing Adjustments help take any style of clothing and adjusting or modyfing it to the customer's desires.
             Pricing varies for the type of fabric and the style it is being adjusted too. Contact us for more information.
         </p>
-        <a class="join" href="contactussewing.html">Contact Us</a>
-        </div>
+        <p>
+        <a class="join2" href="contactussewing.html">Contact Us</a>
+        </p>
     </div>
     <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
