--- a/sewing/contactussewing.html
+++ b/sewing/contactussewing.html
@@ -43,7 +43,7 @@
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
   <br>
-    <main class="Time Frame">
+    <main class="time-frame">
         <h2>Time Frame</h2>
         <p>Most main stream clothing sales will take 1-2 months to process, be created, and shipped to the customer.
             Any adjustments made to clothing will be variable based upon the difficulty of the adjustment and the type
