Adding alts to photos

--- a/sewing/contactussewing.html
+++ b/sewing/contactussewing.html
@@ -25,17 +25,17 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="Images/emailing.jpeg" style="width:100%">
+      <img src="Images/emailing.jpeg" style="width:100%" alt="A woman emailing">
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="Images/sellingdress.jpg" style="width:100%">
+      <img src="Images/sellingdress.jpg" style="width:100%" alt="A woman buying a dress">
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="Images/woman-trying-on-dress.jpg" style="width:100%">
+      <img src="Images/woman-trying-on-dress.jpg" style="width:100%" alt="A woman looking at a dress">
     </div>
   
     <!-- Next and previous buttons -->
